--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h4 {
 	font-family: "Comic Sans Ms";
 	text-align: left;
 	}
-loga {
+.loga {
 	text-align: left;
 	display: flex;
 	align-items: stretch;
